不带参数服务
11

--- a/redis-server.conf
+++ b/redis-server.conf
@@ -9,7 +9,7 @@ respawn
 # give up restart after 2 respawns in 60 seconds
 respawn limit 2 60
 
-# The default of 5 seconds is too low if we have rt indices and have to flush them
+# The default of 5 seconds is too low if we have rt indices and have to flush 
 kill timeout 30
 
 expect fork
